[iOS] Improve Swizzle Debugging

This CL makes sure that [UIImage imageWithContentsOfFile:] and
[NSData dataWithContentsOfFile:] do not return nil when called during
debugging.

Bug: 721258
Change-Id: Iabdffed4065142fa40b55bf8e2befb73d8ede733
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4067581
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Commit-Queue: Joemer Ramos <joemerramos@chromium.org>
Reviewed-by: Louis Romero <lpromero@google.com>
Cr-Commit-Position: refs/heads/main@{#1079276}